# residencia_embarcatech_cap_02_unid_03

./: CMakeLists.txt
src/: CMakeLists.txt  main.c  main.example.c
src/buzzer/: buzzer.c  buzzer.h
src/joystick/: joystick.c  joystick.h
src/microphone/: microphone.c  microphone.h
